# mak

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  mak
headers/: type_traits.h  utility.h
notes/: todo.md
src/: utility.cpp
src/utility/: utility.cpp
test/: test.h  type_traits_test.cpp  utility_test.cpp
